// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover> renders Popover 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders Popover on bottom 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="bottom"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="bottom"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders Popover on the left 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="left"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="left"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders Popover on the right 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders Popover on top 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="top"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="top"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with click as trigger 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="click"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger="click"
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with focus as trigger 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="focus"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger="focus"
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with focus as trigger 2`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      <div>
        <strong>
          asdasda
        </strong>
        <p>
          asdsad
        </p>
      </div>
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with focus as trigger if does not pass pass trigger 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with hover as trigger 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with specific attributes 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      data-id="0"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with specific className 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover my-class"
      id=""
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;

exports[`<Popover> renders with specific id 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      className="Van-Popover"
      id="my-id"
      placement="right"
      rootClose={true}
      title="Popup title"
      trigger="hover"
    >
      String content
    </Popover>
  }
  placement="right"
  rootClose={true}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="Van-Popover-trigger"
  >
    <span>
      Trigger content
    </span>
  </span>
</OverlayTrigger>
`;
